# Https-client

./: README.md  exceptions.py  main.py  pol.py  proj.toml  pyproject.toml  requirements.txt  response.py  test_main.py  tests.py
html/: saved_contents1.html  saved_contents10.html  saved_contents11.html  saved_contents12.html  saved_contents13.html  saved_contents14.html  saved_contents19.html  saved_contents2.html  saved_contents21.html  saved_contents3.html  saved_contents34.html  saved_contents4.html  saved_contents5.html  saved_contents6.html  saved_contents7.html  saved_contents8.html  saved_contents9.html
json/: saved_contents.json  saved_contents1.json  saved_contents10.json  saved_contents11.json  saved_contents12.json  saved_contents13.json  saved_contents14.json  saved_contents15.json  saved_contents16.json  saved_contents17.json  saved_contents2.json  saved_contents3.json  saved_contents4.json  saved_contents5.json  saved_contents6.json  saved_contents7.json  saved_contents8.json  saved_contents9.json
requests/: __init__.py  delete.py  get.py  post.py  put.py
tests/: test_delete.py  test_exceptions.py  test_get.py  test_main.py  test_main_cli.py  test_post.py  test_put.py  test_response.py
