[tool.poetry]
name = "https-client"
version = "0.1.0"
description = ""
authors = ["GrEgor196 <E.R.Grishin@urfu.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
